--- a/encyclopedia/templates/encyclopedia/edit.html
+++ b/encyclopedia/templates/encyclopedia/edit.html
@@ -1,18 +1,16 @@
 {% extends "encyclopedia/layout.html" %}
 
 {% block title %}
-Encyclopedia
+Edit | {{ title }}
 {% endblock %}
 
 {% block body %}
-<h1>Edit</h1>
-<form action="{% url 'save_edit' %}" method="POST">
+<h1>Edit: {{ title }}</h1>
+<form action="{% url 'save_edit' title %}" method="POST">
     {% csrf_token %}
-    <label for="page_title">Title: </label>
-    <input type="text" id="page_title" name="title" placeholder="Enter a title" value="{{ title }}"><br>
     <label for="markdown_content">Markdown Content:</label><br>
     <textarea name="content" id="markdown_content">{{ content }}</textarea><br>
-    <input type="submit" value="Edit" class="btn btn-primary">
+    <input type="submit" value="Save changes" class="btn btn-primary">
 </form>
 
 {% endblock %}
