--- a/encyclopedia/templates/encyclopedia/entry.html
+++ b/encyclopedia/templates/encyclopedia/entry.html
@@ -6,9 +6,8 @@
 
 {% block body %}
 {{content | safe}}
-<form action="{% url 'edit' %}" method="POST">
+<form action="{% url 'edit' title %}" method="POST">
     {% csrf_token %}
-    <input type="hidden" name="entry_title" value="{{ title }}">
     <input type="submit" value="Edit" class="btn btn-danger">
 </form>
 {% endblock %}
