--- a/encyclopedia/templates/encyclopedia/search.html
+++ b/encyclopedia/templates/encyclopedia/search.html
@@ -1,11 +1,11 @@
 {% extends "encyclopedia/layout.html" %}
 
 {% block title %}
-Encyclopedia
+Search
 {% endblock %}
 
 {% block body %}
-<h1>Search</h1>
+<h2>Search result</h2>
 
 <ul>
     {% for entry in recommendation %}
